# coursework-2

./: CMakeLists.txt  LAB1_1.xlsx  LAB1_2.xlsx  main.cpp
